add in some colors

--- a/static/index.html
+++ b/static/index.html
@@ -70,6 +70,33 @@ THE SOFTWARE.
 	fill: lightgreen;
 }
 
+
+.queued {
+    stroke: gray;
+    fill: #ccc;
+}
+
+.dev {
+	stroke: green;
+	fill: lightgreen;
+}
+
+.review {
+	stroke: yellow;
+	fill: yellow;
+}
+
+.ready {
+	stroke: orange;
+	fill: orange;
+}
+
+.done {
+	stroke: gray;
+	fill: #eee;
+}
+
+
 .brush .extent {
 	stroke: gray;
 	fill: blue;
