lighten up color

--- a/static/index.html
+++ b/static/index.html
@@ -72,12 +72,12 @@ THE SOFTWARE.
 
 
 .queued {
-    stroke: gray;
-    fill: #ccc;
+    stroke: #eee;
+    fill: #eee;
 }
 
 .dev {
-	stroke: green;
+	stroke: lightgreen;
 	fill: lightgreen;
 }
 
@@ -95,7 +95,6 @@ THE SOFTWARE.
 	stroke: gray;
 	fill: #eee;
 }
-
 
 .brush .extent {
 	stroke: gray;
